tests/ui/parser/ice-issue-127600.rs
const!(&raw mut a);
//~^ ERROR expected identifier, found `!`
